--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-version: '3.8'
-
-
 services:
 
   # mongo-db:
@@ -14,14 +11,14 @@ services:
   #   ports:
   #     - 27017:27017
 
-  # postgres-db:
-  #   image: postgres:15.3
-  #   restart: always
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_DB: my-db
-  #     POSTGRES_PASSWORD: 123456
-  #   volumes:
-  #     - ./postgres:/var/lib/postgresql/data
-  #   ports:
-  #     - 5432:5432
+  postgres-db:
+    image: postgres:15.3
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
