--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,13 @@
 
-
 PORT=3000
+
+PUBLIC_PATH=public
+
+POSTGRES_URL=postgresql://postgres:123456@localhost:5432/CCS
+POSTGRES_USER=postgres
+POSTGRES_DB=CCS
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=123456
+
+
+NODE_ENV=development
